--- a/res/xml/config_center_statusbar.xml
+++ b/res/xml/config_center_statusbar.xml
@@ -114,4 +114,20 @@
             android:summary="@string/status_bar_notif_count_summary"
             android:defaultValue="false" />
     </PreferenceCategory>
+
+    <!-- Signal icon style -->
+    <Preference
+        android:key="android.theme.customization.signal_icon"
+        android:icon="@drawable/ic_signal"
+        android:title="@string/signal_style_title"
+        android:summary="@string/signal_style_summary"
+        android:fragment="com.havoc.config.center.fragments.SignalIcons"/>
+
+    <!-- Wifi icon style -->
+    <Preference
+        android:key="android.theme.customization.wifi_icon"
+        android:icon="@drawable/ic_wifi"
+        android:title="@string/wifi_style_title"
+        android:summary="@string/wifi_style_summary"
+        android:fragment="com.havoc.config.center.fragments.WifiIcons"/>
 </PreferenceScreen>
