--- a/res/xml/config_center_misc.xml
+++ b/res/xml/config_center_misc.xml
@@ -58,4 +58,9 @@
             android:title="@string/ignore_window_secure_title"
             android:summary="@string/ignore_window_secure_summary"
             android:defaultValue="false"/>
+        <com.havoc.support.preferences.SystemPropSwitchPreference
+            android:key="persist.aicp.hosts_block"
+            android:title="@string/hosts_block_title"
+            android:summary="@string/hosts_block_summary"
+            android:defaultValue="false" />
 </PreferenceScreen>
