--- a/res/xml/config_center_misc.xml
+++ b/res/xml/config_center_misc.xml
@@ -48,4 +48,9 @@
             android:summary="@string/charging_animation_summary"
             android:defaultValue="true" />
     </PreferenceCategory>
+        <com.havoc.support.preferences.GlobalSettingSwitchPreference
+            android:key="pm_downgrade_allowed"
+            android:title="@string/app_downgrade_title"
+            android:summary="@string/app_downgrade_summary"
+            android:defaultValue="false"/>
 </PreferenceScreen>
