--- a/res/xml/config_center_quicksettings.xml
+++ b/res/xml/config_center_quicksettings.xml
@@ -158,4 +158,17 @@
             android:summary="@string/qs_footer_edit_summary"
             android:defaultValue="true" />
     </PreferenceCategory>
+
+    <PreferenceCategory
+        android:title="@string/qs_media">
+
+    <!-- QS media player -->
+    <com.havoc.support.preferences.SystemSettingSwitchPreference
+        android:key="qs_media_player"
+        android:title="@string/qs_media_player_title"
+        android:summaryOn="@string/qs_media_player_summary_on"
+        android:summaryOff="@string/qs_media_player_summary_off"
+        android:defaultValue="false" />
+
+    </PreferenceCategory>
 </PreferenceScreen>
